--- a/css/nav.css
+++ b/css/nav.css
@@ -10,7 +10,7 @@ nav {
     line-height: 1em;
     padding: 0em 1em;
     position: fixed;
-    background-color: #90EE90;
+ background-color: #90EE90;
 }
 
 .logo {
@@ -49,7 +49,7 @@ nav li a:hover {
     transition: all 0.5s ease 0s;
 }
 
-.n {
+nav .n {
     margin-top: 2.5em;
     margin-left: 2em;
 }
