--- a/css/project.css
+++ b/css/project.css
@@ -52,13 +52,11 @@ float: left;
     align-items: center;
 }
 
-.wrapper{
-    display: flex;
-    height: 100%;
+#nav{
     width: 100%;
-    align-items: center; 
-    justify-content: center;
 }
+
+
 
 footer {
     position: absolute;
