--- a/css/project.css
+++ b/css/project.css
@@ -12,6 +12,12 @@ body {
 
 
 }
+body{
+    background-image: url("https://images.unsplash.com/photo-1614850523060-8da1d56ae167");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 .heading {
     text-align: center;
