--- a/css/project.css
+++ b/css/project.css
@@ -57,7 +57,8 @@ footer {
     left: 0;
     bottom: 0;
     right: 0;
-    background-color: #90EE90;
+    background-color: #ffffbf;
+    border: 4px solid #90ee8f;
     padding: 0.5em;
     margin-bottom: 0em;
 }
