--- a/css/nav.css
+++ b/css/nav.css
@@ -10,7 +10,8 @@ nav {
     line-height: 1em;
     padding: 0em 1em;
     position: fixed;
- background-color: #90EE90;
+    background-color: #601cea;
+
 }
 
 .logo {
